<resources>
    <string name="app_name">Audio Cutter</string>
    <string name="add_audio">Add Audio</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="play_audio_button">Play Audio Button</string>
    <string name="setting_audio_button">Set Audio As Buttion</string>
    <string name="share_audio_button">Share Audio Button</string>
    <string name="empty_list_info1">Fill up this space!</string>
    <string name="empty_list_background_image">Background image music note</string>
    <string name="empty_list_arrow">Arrow</string>
    <string name="empty_list_info2">It\'s a bit empty here!</string>
    <string name="ringtone_set">"Ringtone set to "</string>
    <string name="save">Save</string>
    <string name="start_marker">Start Marker</string>
    <string name="end_marker">End Marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="ffwd">Fast Forward</string>
    <string name="start_label">"Start:"</string>
    <string name="end_label">End:</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="no_extension_error">Sorry, can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="bad_extension_error">Sorry, is not yet able to edit files of type</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_ok_button">OK</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="about_title">About Audio Cutter</string>
    <string name="about_text"><![CDATA[Use Audio Cutter to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>
    <string name="time_seconds">seconds</string>
    <string name="stop">Stop</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="no_unique_filename">File name not unique</string>
    <string name="no_space_error">Not enough space</string>
    <string name="artist_name">Artist</string>
    <string name="too_small_error">File too small</string>
</resources>