<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_template"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/distance_between_controls"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/distance_between_controls_2x">

        <TextView
            android:id="@+id/card_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="titel"
            android:textSize="@dimen/card_title_size"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

<!--        todo: remove or change. idk -->
        <TextView
            android:id="@+id/card_view_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="info"
            card_view:layout_constraintEnd_toEndOf="@+id/card_view_title"
            card_view:layout_constraintStart_toStartOf="@+id/card_view_title"
            card_view:layout_constraintTop_toBottomOf="@+id/card_view_title"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/card_view_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/play_audio_button"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_play"
            android:theme="@style/IconTheme"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/card_view_title" />

        <ImageButton
            android:id="@+id/card_view_setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/setting_audio_button"
            android:padding="0dp"
            android:layout_marginRight="@dimen/distance_between_controls"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_setting"
            android:theme="@style/IconTheme"
            card_view:layout_constraintBottom_toBottomOf="@+id/card_view_play"
            card_view:layout_constraintEnd_toStartOf="@+id/card_view_share"
            card_view:layout_constraintTop_toTopOf="@+id/card_view_play" />

        <ImageButton
            android:id="@+id/card_view_share"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/share_audio_button"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_share"
            android:theme="@style/IconTheme"
            card_view:layout_constraintBottom_toBottomOf="@+id/card_view_play"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/card_view_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
